--- a/Dev_protfolio/index.html
+++ b/Dev_protfolio/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     />
-
+    <link rel="stylesheet" href="style.css" />
     <title>Mary_Hardy_Protfolio</title>
   </head>
   <body>
@@ -17,20 +17,22 @@
         <nav>
           <li><a href="">Protfolio</a></li>
           <li><a href="">Blog</a></li>
-          <button>Hire me</button>
+          <button class="nav-btn">Hire me</button>
         </nav>
       </div>
-      <div class="hero-page">
-        <h4>Hi, I am</h4>
-        <h3>Mary Hardy</h3>
-        <p>
+
+      <section class="hero-page">
+        <div>
+        <h4 class="hero-greeting">Hi, I am</h4>
+        <h3 class="hero-name">Mary Hardy</h3>
+        <p class="hero-description">
           Shot what able cold new see hold.Friendly as an betrayed formerly he.
           Morning because as to society behaved moments.
         </p>
-        <button><i class="fa-solid fa-download"></i>Download CV</button>
-        <button><i class="fa-solid fa-phone"></i>Contact</button>
+        <button class="downloadBtn"><i class="fa-solid fa-download"></i>Download CV</button>
+        <button class="phone"><i class="fa-solid fa-phone"></i>Contact</button>
       </div>
-      <div class="hardy">
+      <div>
         <img src="images/hardy.png" alt="hardy's_pic" />
       </div>
     </header>
