--- a/Dev_protfolio/index.html
+++ b/Dev_protfolio/index.html
@@ -36,5 +36,36 @@
         <img src="images/hardy.png" alt="hardy's_pic" />
       </div>
     </header>
+
+  <!-- main section  -->
+   <section class="about-me">
+     <div class="about-data">
+        <h3 class="about-title">About me</h3>
+        <p class="about-desc">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and
+            slick websites that provide real value to the end user. Thousands of clients have procured
+            exceptional resulfs while working with me. Delivering work within time and budget which meets
+            clients requirements in our mata.</p>
+        <div class="about-info">
+            <div class="personal-info">
+                <h3>Name:</h3>
+                <p>Mary Hardy</p>
+            </div>
+            <div class="personal-info">
+                <h3>Email:</h3>
+                <a href="info@gmail.com"></a>
+            </div>
+            <div class="personal-info">
+                <h3>Date of birth:</h3>
+                <p>11 November 1987</p>
+            </div>
+            <div class="personal-info">
+                <h3>From:</h3>
+                <p>Los Angeles, USA</p>
+            </div>
+        </div>
+     </div>
+
+   </section>
+
   </body>
 </html>
