styling about me section

--- a/Dev_protfolio/index.html
+++ b/Dev_protfolio/index.html
@@ -52,7 +52,7 @@
             </div>
             <div class="personal-info">
                 <h3>Email:</h3>
-                <a href="info@gmail.com"></a>
+                <a href="info@gmail.com">info@gmail.com</a>
             </div>
             <div class="personal-info">
                 <h3>Date of birth:</h3>
@@ -64,8 +64,8 @@
             </div>
         </div>
      </div>
-
    </section>
+<hr>
 
   </body>
 </html>
