--- a/Dev_protfolio/index.html
+++ b/Dev_protfolio/index.html
@@ -66,6 +66,60 @@
      </div>
    </section>
 <hr>
+<!-- skills -->
 
+<section class="skills-sec">
+    <h3 class="skill-title">What I do</h3>
+    <p class="skill-desc">I have more than 10 years experience building software for clients all over the world. Below is a quick
+        overview of my main technical skill sets and technologies i use. Want to find out more about my experience?
+        Check out my online resume and project portfolio.</p>
+        <div class="skills-set">
+    <div class="skills">
+        <img src="icons/js.png" alt="javaScript">
+        <h3>Vanilla JavaScript</h3>
+        <p>List skill/technologies
+            here. You can change the
+            icon above to any of the
+            1500+ FontAwesome 5
+            free icons available.
+            Aenean commodo ligula
+            eget dolor.</p>
+    </div>
+    <div class="skills">
+        <img src="icons/react.png" alt="react">
+        <h3>React</h3>
+        <p>List skill/technologies
+            here. You can change the
+            icon above to any of the
+            1500+ FontAwesome 5
+            free icons available.
+            Aenean commodo ligula
+            eget dolor.
+            </p>
+    </div>
+    <div class="skills">
+        <img src="icons/nodejs.png" alt="Node.js">
+        <h3>Node.js</h3>
+        <p>List skill/technologies
+            here. You can change the
+            icon above to any of the
+            1500+ FontAwesome 5
+            free icons available.
+            Aenean commodo ligula
+            eget dolor.</p>
+    </div>
+    <div class="skills">
+        <img src="icons/mongo.png" alt="mongobd">
+        <h3>MongoDB</h3>
+        <p>List skill/technologies
+            here. You can change the
+            icon above to any of the
+            1500+ FontAwesome 5
+            free icons available.
+            Aenean commodo ligula
+            eget dolor.</p>
+    </div>
+</div>
+</section>
   </body>
 </html>
