adding and styling education and expirence section

--- a/Dev_protfolio/index.html
+++ b/Dev_protfolio/index.html
@@ -65,7 +65,6 @@
         </div>
      </div>
    </section>
-<hr>
 <!-- skills -->
 
 <section class="skills-sec">
@@ -121,5 +120,76 @@
     </div>
 </div>
 </section>
-  </body>
+
+<!-- summary of resume  -->
+<h3 class="res-title">A summary of My Resume</h3>
+ <section class="resume-sum">
+  <div class="education">
+   <h2>My Education</h2>
+   <div class="degree">
+    <h3 class="degree-name">Master in Computer Engineering</h3>
+    <h4>Harvard University / 2015 2017</h4>
+    <p>List skill/technologies here. You can change the icon above 
+
+      to any of the 1500+ FontAwesome 5 free icons available. Aenean
+      commodo ligula eget dolor.</p>
+   </div>
+      <hr>  
+   <div class="degree">
+    <h3 class="degree-name">Master in Computer Engineering</h3>
+    <h4>Harvard University / 2015 2017</h4>
+    <p>List skill/technologies here. You can change the icon above 
+
+      to any of the 1500+ FontAwesome 5 free icons available. Aenean
+      commodo ligula eget dolor.</p>
+   </div>
+    <hr>
+   <div class="degree">
+    <h3 class="degree-name">Master in Computer Engineering</h3>
+    <h4>Harvard University / 2015 2017</h4>
+    <p>List skill/technologies here. You can change the icon above 
+
+      to any of the 1500+ FontAwesome 5 free icons available. Aenean
+      commodo ligula eget dolor.</p>
+   </div>
+  </div>
+  <!-- experiences -->
+  <div class="experience">
+     <h2>My Experience
+    </h2>
+     <div class="experiened">
+      <h3>Sr. Font End Developer
+      </h3>
+      <h4>Apple Inc / 2020 Current
+      </h4>
+      <p>List skill/technologies here. You can change the icon above 
+
+to any of the 1500+ FontAwesome 5 free icons available. Aenean
+commodo ligula eget dolor.</p>
+     </div>
+     <hr>
+     <div class="experiened">
+      <h3>Jr. Font End Developer</h3>
+      <h4>Dribbble Inc / 2018 2022
+      </h4>
+      <p>List skill/technologies here. You can change the icon above 
+
+to any of the 1500+ FontAwesome 5 free icons available. Aenean
+commodo ligula eget dolor.</p>
+     </div>
+     <hr>
+     <div class="experiened">
+      <h3>HTML Developer</h3>
+      <h4>Adobe Inc / 2017 2018</h4>
+      <p>List skill/technologies here. You can change the icon above 
+
+to any of the 1500+ FontAwesome 5 free icons available. Aenean
+commodo ligula eget dolor.</p>
+     </div>
+  </div>
+ </section>
+ <div class="resume-down">
+ <button class="downloadBtn"><i class="fa-solid fa-download"></i>Download CV</button>
+</div> 
+</body>
 </html>
