footer adding and styling

--- a/Dev_protfolio/index.html
+++ b/Dev_protfolio/index.html
@@ -191,5 +191,24 @@ commodo ligula eget dolor.</p>
  <div class="resume-down">
  <button class="downloadBtn"><i class="fa-solid fa-download"></i>Download CV</button>
 </div> 
+<section class="footer">
+  <div class="footer-contact">
+    <h3>Lets Connect</h3>
+    <p>Please fill out the form on this section to contact with me or call between 
+      9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+      <div class="social">
+    <a href=""><i class="fa-brands fa-facebook"></i></a>
+    <a href=""><i class="fa-brands fa-twitter"></i></a>
+    <a href=""><i class="fa-brands fa-instagram"></i></a>
+  </div>
+  </div>
+  <div class="footer-message">
+    <h3>Let’s Message me</h3>
+    <input class="name" name="name" type="text" placeholder="Your name">
+ <input class="mail" name="mail" type="text" placeholder="Your E-mail">
+ <input class="message" name="message" type="text" placeholder="Message">
+    <button class="submitBtn" type="submit">Submit</button>
+  </div>
+</section>
 </body>
 </html>
