--- a/Recip_app/index.html
+++ b/Recip_app/index.html
@@ -25,9 +25,13 @@
             <div class="recipe-container">
                 <h2>Search your desire recipe</h2>
             </div>
+            <div class="recipe-details">
+                <button type="button" class="closeBtn">close</button>
+                <div class="recipe-details-content"></div>
+            </div>
         </section>
     </main>
-
+  
     <script src="app.js"></script>
 </body>
 
